--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gulp-jshint": "^2.0.0",
     "gulp-rimraf": "^0.2.0",
     "gulp-sass": "^2.2.0",
+    "gulp-svgmin": "^1.2.1",
     "gulp-uglify": "^1.1.0",
     "jshint": "^2.9.1"
   }
